--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     environment: production
     env:
         AZURE_WEBAPP_NAME: toyscript    
-        AZURE_WEBAPP_PACKAGE_PATH: '.'     
+        AZURE_WEBAPP_PACKAGE_PATH: './build'     
         NODE_VERSION: '14.x'   
         
     steps:
@@ -27,7 +27,8 @@ jobs:
       run: |
         npm install
         CI='' npm run build
-  
+      working-directory: .
+      
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
       with:
