--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     environment: production
     env:
         AZURE_WEBAPP_NAME: toyscript    
-        AZURE_WEBAPP_PACKAGE_PATH: './build'     
+        AZURE_WEBAPP_PACKAGE_PATH: 'build'     
         NODE_VERSION: '14.x'   
         
     steps:
