--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -39,7 +39,7 @@ jobs:
         # Build and test the project, then
         # deploy to Azure Web App.
         npm install
-        npm run build --if-present
+        CI='' npm run build --if-present
         
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
