--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -22,7 +22,8 @@ env:
   AZURE_WEBAPP_NAME: toyscript    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: 'build'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '14.x'                # set this to the node version to use
-
+  WEBSITE_WEBDEPLOY_USE_SCM: true
+  
 jobs:
   build-and-deploy:
     name: Build and Deploy
